[gd_scene load_steps=31 format=2]

[ext_resource path="res://images/background00.jpg" type="Texture" id=1]
[ext_resource path="res://FishesScenes/jellyFishScene.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/playerScene.tscn" type="PackedScene" id=3]
[ext_resource path="res://font/Brightly Crush Shine.otf" type="DynamicFontData" id=4]
[ext_resource path="res://menuScene/menuAndPoints.tscn" type="PackedScene" id=5]
[ext_resource path="res://images/clock.png" type="Texture" id=6]
[ext_resource path="res://FishesScenes/fishLevel1Scene.tscn" type="PackedScene" id=7]
[ext_resource path="res://CHAPTER2.gd" type="Script" id=8]
[ext_resource path="res://introChapMess.gd" type="Script" id=9]
[ext_resource path="res://images/gameBox.png" type="Texture" id=10]
[ext_resource path="res://font/Avocado Creamy.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://finishBox2.gd" type="Script" id=12]
[ext_resource path="res://font/Xolonium-Regular.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://FishesScenes/clockAddTimeScene.tscn" type="PackedScene" id=14]
[ext_resource path="res://musicScene/musicScene.tscn" type="PackedScene" id=20]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.12549, 0.913725, 0.878431, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0235294, 0.0470588, 0.290196, 0.564706 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.176471, 0.894118, 0.968627, 0.564706 )

[sub_resource type="DynamicFont" id=4]
size = 90
font_data = ExtResource( 11 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0235294, 0.0470588, 0.290196, 0.564706 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.0235294, 0.0470588, 0.290196, 0.564706 )

[sub_resource type="DynamicFont" id=7]
size = 100
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.862745, 0.839216, 0.988235, 0.411765 )

[sub_resource type="DynamicFont" id=9]
size = 25
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.713726, 0.815686, 0.956863, 0.929412 )
border_color = Color( 0.6, 0.796078, 0.968627, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.462745, 0.670588, 0.960784, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.713726, 0.815686, 0.956863, 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.0352941, 0.294118, 0.654902, 1 )

[sub_resource type="DynamicFont" id=14]
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=15]
font_data = ExtResource( 13 )

[node name="Node" type="Node"]
script = ExtResource( 8 )

[node name="background02" type="Sprite" parent="."]
position = Vector2( 520, 300 )
scale = Vector2( 1.8, 1.9 )
texture = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 19.716, 27.299 )

[node name="JellyFishScene" parent="." instance=ExtResource( 2 )]

[node name="JellyFishScene2" parent="." instance=ExtResource( 2 )]

[node name="JellyFishScene3" parent="." instance=ExtResource( 2 )]

[node name="JellyFishScene4" parent="." instance=ExtResource( 2 )]

[node name="JellyFishScene5" parent="." instance=ExtResource( 2 )]

[node name="JellyFishScene6" parent="." instance=ExtResource( 2 )]

[node name="JellyFishScene7" parent="." instance=ExtResource( 2 )]

[node name="JellyFishScene8" parent="." instance=ExtResource( 2 )]

[node name="JellyFishScene9" parent="." instance=ExtResource( 2 )]

[node name="JellyFishScene10" parent="." instance=ExtResource( 2 )]

[node name="JellyFishScene11" parent="." instance=ExtResource( 2 )]

[node name="JellyFishScene12" parent="." instance=ExtResource( 2 )]

[node name="JellyFishScene13" parent="." instance=ExtResource( 2 )]

[node name="JellyFishScene14" parent="." instance=ExtResource( 2 )]

[node name="JellyFishScene15" parent="." instance=ExtResource( 2 )]

[node name="JellyFishScene16" parent="." instance=ExtResource( 2 )]

[node name="JellyFishScene17" parent="." instance=ExtResource( 2 )]

[node name="JellyFishScene18" parent="." instance=ExtResource( 2 )]

[node name="JellyFishScene19" parent="." instance=ExtResource( 2 )]

[node name="JellyFishScene20" parent="." instance=ExtResource( 2 )]

[node name="fishLevel1(1)" parent="." instance=ExtResource( 7 )]

[node name="fishLevel1(1)2" parent="." instance=ExtResource( 7 )]

[node name="fishLevel1(1)3" parent="." instance=ExtResource( 7 )]

[node name="addTime" parent="." instance=ExtResource( 14 )]

[node name="finishBox" type="Sprite" parent="."]
visible = false
position = Vector2( 500, 300 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 10 )
script = ExtResource( 12 )

[node name="next" type="Button" parent="finishBox"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -422.0
margin_top = -673.0
margin_right = -422.0
margin_bottom = -569.0
rect_scale = Vector2( 0.839454, 0.959047 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
text = " NEXT "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="playAgain" type="Button" parent="finishBox"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -422.0
margin_top = -457.0
margin_right = -253.0
margin_bottom = -350.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
text = " play again "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="Button" parent="finishBox"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -422.0
margin_top = -250.0
margin_right = -200.0
margin_bottom = -147.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
text = " quit "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="message" type="Label" parent="finishBox"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -700.0
margin_top = -430.0
margin_right = -512.0
margin_bottom = -350.0
custom_fonts/font = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu" parent="." instance=ExtResource( 5 )]

[node name="clock" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -65.0
margin_top = -40.0
margin_right = 65.0
custom_styles/panel = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CHAPTER2Timer" type="Timer" parent="clock"]

[node name="MessageTimer" type="Label" parent="clock"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -58.0
margin_top = -16.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.996078, 0.996078, 0.996078, 1 )
text = "99"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="clock"]
position = Vector2( 25, 20 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 6 )

[node name="music" parent="." instance=ExtResource( 20 )]

[node name="introCHAPTER2" type="Node2D" parent="."]
visible = false
z_index = 2

[node name="intro" type="Panel" parent="introCHAPTER2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 40.0
margin_top = 30.0
margin_right = 990.0
margin_bottom = 580.0
custom_styles/panel = SubResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="introButton" type="Button" parent="introCHAPTER2/intro"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = 190.0
margin_right = 50.0
margin_bottom = 230.0
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
custom_fonts/font = SubResource( 14 )
text = "START"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="message" type="Label" parent="introCHAPTER2/intro"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -403.0
margin_top = -167.0
margin_right = 397.0
margin_bottom = 183.0
custom_fonts/font = SubResource( 15 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="introCHAPTER2/intro"]
position = Vector2( 729.5, 243 )
scale = Vector2( 0.524445, 0.511111 )
texture = ExtResource( 6 )
[connection signal="pressed" from="finishBox/next" to="finishBox" method="_on_next_pressed"]
[connection signal="pressed" from="finishBox/playAgain" to="finishBox" method="_on_playAgain_pressed"]
[connection signal="pressed" from="finishBox/quit" to="finishBox" method="_on_quit_pressed"]
[connection signal="timeout" from="clock/CHAPTER2Timer" to="." method="_on_CHAPTER2Timer_timeout"]
[connection signal="pressed" from="introCHAPTER2/intro/introButton" to="." method="_on_introButton_pressed"]
